--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,10 +16,11 @@
         <meta name="theme-color" content="#fb016e">
 
         <link rel="icon" type="image/png" href="/static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#28'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#29'>
 
         {% if page.sel == 'skins' %}
-        <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css'>
+        <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css#1'>
+        <link rel='stylesheet' type='text/css' href='/static/css/jquery.tagit.css'>
         {% endif %}
 
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -57,14 +58,13 @@
         <header>
             <a href="/" id="defaulta">
                 <img src="/static/img/logo.png" id="logo" draggable="false">
-                <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v3.5</span>{% endif %}</h1>
+                <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v4.0</span>{% endif %}</h1>
             </a>
             <br/>
             <nav>
-                <a{% if page.sel == 'home' %} class="sel"{% endif %} href="/index.html">Home</a>
-                <!--
-                <a{% if page.sel == 'client' %} class="sel"{% endif %} href="/client.html">Client</a>
-                -->
+                <!--<a{% if page.sel == 'home' %} class="sel"{% endif %} href="/index.html">Home</a>-->
+                <!--<a{% if page.sel == 'client' %} class="sel"{% endif %} href="/client.html">Client</a>-->
+                <a{% if page.sel == 'editor' %} class="sel"{% endif %} href="/editor.html">Skin Editor</a>
                 <a{% if page.sel == 'skins' %} class="sel"{% endif %} href="/skins.html">Skin Manager</a>
                 <span id="more">More &#9660;
                     <div class="moredd">
