--- a/static/css/skinstyle.css
+++ b/static/css/skinstyle.css
@@ -41,12 +41,6 @@ header h1{
         margin-left:0;
     }
 }
-#loggedin h1{
-    font-size:40px;
-    font-weight:normal;
-    margin:0;
-    font-family:'VT323', 'Consolas', monospace;
-}
 #defaulta{
     color:inherit;
     text-decoration:none;
@@ -136,6 +130,20 @@ ul li{
     box-shadow:5px 5px 0px 0px #b30050;
     cursor:pointer;
 }
+button:focus{
+    outline:none;
+}
+.jscolor{
+    text-decoration:none;
+    font-family:'VT323', 'Consolas', monospace;
+    text-transform:uppercase;
+    display:inline-block;
+    font-size:24px;
+    padding:5px 10px;
+    border:0;
+    box-shadow:none !important;
+    border:1px solid #333 !important;
+}
 @keyframes sizes{
     0% {
         transform:scale(1);
@@ -163,20 +171,26 @@ ul li{
     border:3px solid #fb016e;
     z-index:997;
 }
-input[type=text],input[type=password]{
+input[type=text],input[type=password],ul.tagit{
     background:#ccc;
-    font-size:21px;
+    font-size:21px !important;
     text-decoration:none;
     color:#111;
     padding:5px 10px;
-    font-family:'VT323', 'Consolas', monospace;
+    font-family:'VT323', 'Consolas', monospace !important;
     margin-left:5px;
     display:inline-block;
     box-shadow:5px 5px 0px 0px #777;
     margin-bottom:20px;
     border:0px;
 }
-#loggedin, #addskin, #addskin2, #editskin, #smpskins, #shareskin, #shared{
+input:focus,ul.tagit{
+    outline:none;
+}
+input:-webkit-autofill {
+    box-shadow:5px 5px 0px 0px #777, 0 0 0px 1000px #ccc inset;
+}
+#loggedin, #addskin, #addskin2, #editskin, #smpskins, #shareskin, #shared, #smpskinscat, #backupPage, #addskinslot{
     display:none;
 }
 .skinslot{
@@ -185,7 +199,7 @@ input[type=text],input[type=password]{
     font-family:'VT323', 'Consolas', monospace;
     min-width:75px;
     height:75px;
-    margin:0px 10px;
+    margin:9px;
     box-shadow:5px 5px 0px 0px #b30050;
     background:#fb016e;
     line-height:65px;
@@ -194,16 +208,142 @@ input[type=text],input[type=password]{
     cursor:pointer;
     animation:sizes2 1s infinite alternate;
 }
-.sort-placeholder{
-    display:inline-block;
-    border:1px dashed #ccc;
-    vertical-align:middle;
-    margin:0px 10px;
-}
 .skinslot span{
     vertical-align:middle;
     margin-right:20px;
 }
+.skin{
+    background:#fb016e;
+    overflow:hidden;
+    white-space:nowrap;
+    padding:15px 0;
+    margin:7px 8px;
+    width:275px;
+    display:inline-block !important;
+    position:relative;
+    color:#111;
+    box-shadow:5px 5px 0px 0px #b30050;
+    user-select: none;
+}
+.skin .container h1{
+    overflow:hidden;
+    text-overflow:ellipsis;
+    vertical-align:top;
+    position:relative;
+    top:0;
+    left:0;
+    transition:top .45s, left .45s;
+    margin:0;
+}
+.skin .container .img {
+    margin: 0 auto;
+    margin-bottom: 7px;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    top: 0;
+    border: 3px #8e0241 solid;
+    border-radius: 360px;
+}
+.skin .container .avatar{
+    width:100%;
+    height:100%;
+    cursor:pointer;
+    border-radius: 360px;
+}
+.skin .buttons button{
+    color: #111;
+    background: #b30050;
+    font-family: 'VT323';
+    font-size: 22px;
+    padding: 7px 15px;
+    border: none;
+    display: block;
+    cursor:pointer;
+    box-shadow: inset 0 0;
+    margin: 3px 0;
+    width: 100px;
+    transition: all .2s;
+}
+.skin .buttons button[disabled] {
+    color: #444 !important;
+    cursor: not-allowed;
+}
+.skin .buttons button[disabled]:hover {
+    box-shadow: inset 0 0 !important;
+}
+.skin .buttons {
+    position: absolute;
+    top: 50%;
+    right: -100px;
+    transform: translateY(-50%);
+    transition: right .4s;
+}
+.skin .container {
+    position: relative;
+    top: 0;
+    left: 0;
+    transition: all .4s;
+    margin:5px 15px;
+}
+.skin:hover .container {
+    top: 22px;
+    left: -50px;
+}
+.skin:hover h1 {
+    top: 40px;
+    left: 50px;
+}
+.skin:hover .buttons {
+    right: 0;
+}
+.skin button:hover {
+    box-shadow: inset 5px 0;
+}
+.spin {
+    animation: spin 1s infinite;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+#check1 {
+    animation: check1 .2s forwards;
+}
+@keyframes check1 {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 27px;
+    }
+}
+#check2 {
+    animation: check2 .2s forwards;
+    animation-delay: .1s;
+}
+@keyframes check2 {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 50px;
+    }
+}
+.skin .icon {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: -3px;
+    right: -3px;
+    border: inherit;
+    border-radius: 360px;
+}
+
 .choice{
     max-width:600px;
     text-align:left;
@@ -228,6 +368,15 @@ input[type=text],input[type=password]{
 }
 .choice:hover,.sampleskin:hover{
     background:#141414;
+}
+.smpskincatchoice{
+    max-width:370px;
+}
+#loggedin h1{
+    font-size:40px;
+    font-weight:normal;
+    margin:0;
+    font-family:'VT323', 'Consolas', monospace;
 }
 .sknframe{
     border:2px solid #fb016e;
@@ -315,6 +464,7 @@ input[type=text],input[type=password]{
     height:100%;
     display:none;
     cursor:pointer;
+    z-index:98;
 }
 #promo{
     margin:0 auto;
@@ -344,6 +494,36 @@ hr{
     border:1px solid #222;
     width:50%;
 }
+#statusbar{
+    position:fixed;
+    bottom:25px;
+    left:50%;
+    transform:translateX(-50%);
+    background:#fb0171d2;
+    color:#222;
+    font-family:'VT323', 'Consolas', monospace;
+    z-index:999;
+    font-size:28px;
+    vertical-align:middle;
+    padding:3px 13px;
+    color:#111;
+    display:none;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+}
+.cb{
+    cursor:pointer;
+}
+.cblabel{
+    user-select:none;
+    font-family: 'VT323', 'Consolas', monospace;
+    color:#ccc;
+    font-size:22px;
+    transition:color 0.2s;
+    cursor:pointer;
+}
+.cb:checked + .cblabel {
+    color:#fb016e;
+}
 #adbnote{
     display:none;
     font-family:'VT323', 'Consolas', monospace;
@@ -372,4 +552,21 @@ hr{
 ::selection {
     color: #111; 
     background: #ff2d8b;
+}
+.tabBtn{
+    margin-left:10px;
+    cursor:pointer;
+    background-color:#b30050;
+    transition:0.15s all;
+    vertical-align:middle;
+    text-transform:none;
+    user-select: none;
+}
+.tabSel{
+    background-color:#fb016e;
+    font-size:33px;
+    vertical-align:middle;
+}
+.tabBtn:hover{
+    font-size:33px;
 }
