--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -11,6 +11,16 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
             <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
+            <br/><br/>
+
+            <footer>
+                <img src="/static/img/editor-logo.png" width="32"><br/>
+                <span style="font-size:10px;">
+                    Bonk Leagues is in no way affiliated with bonk.io, multiplayer.gg or Chaz, but is simply a fan-made tool website.<br/>
+                    Our website uses cookies to enhance user experience and are required for most of the website to function. By using Bonk Leagues, you agree to the use of cookies.<br/>
+                    <a href="https://bonk.io">Play bonk.io</a> &bull; <a href="/static/data/privacy_policy.html" target="_blank">Privacy &amp; Cookie Policy</a>
+                </span>
+            </footer>
 
             <div class="remodal remodaldiscord" data-remodal-id="remodaldiscord">
                 <button data-remodal-action="close" class="remodal-close"></button>
@@ -31,7 +41,7 @@
 
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#1155</span></span>   
         </section>
-        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bab.js"></script>
         <script src="/static/js/blockdetect.js"></script>
         {% if page.sel == 'skins' %}
@@ -41,7 +51,7 @@
         <script src="/static/js/tag-it.min.js"></script>
         <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="/static/js/{{ page.scriptToUse }}.js#38"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#39"></script>
         <script src="/static/js/remodal.js"></script>
         <script>
             setTimeout(function(){
