--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -11,7 +11,7 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
             <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
-            <br/><br/>
+            <br/><hr/><br/>
 
             <footer>
                 <img src="/static/img/editor-logo.png" width="32"><br/>
@@ -25,21 +25,32 @@
             <div class="remodal remodaldiscord" data-remodal-id="remodaldiscord">
                 <button data-remodal-action="close" class="remodal-close"></button>
                 <h1 class="parthead">Join our Discord server!</h1>
-                <p>We have now opened our official Bonk Leagues Discord server!</p>
-                <p>Join for Bonk Leagues support, chat, suggestions and everything Bonk.</p>
+                <p>Chat with 1000+ others in the official Bonk Leagues Discord server!</p>
+                <p>Here you can get support, chat, suggestions and everything Bonk.</p>
                 <br/>
                 <button data-remodal-action="confirm" onclick="window.open('https://discord.gg/RadQ7xx', '_blank');" class="remodal-confirm button">Join!</button>
                 <button data-remodal-action="close" class="remodal-cancel button">No thanks</button>
                 <br/><br/>
                 <a style="text-decoration:underline;cursor:pointer;" data-remodal-action="cancel" id="cusa">Don't show me this again</a>
             </div>
+            <br/><br/>
 
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Bobk Beks -->
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-8362785424135480"
+                    data-ad-slot="9726605611"
+                    data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <!--
             <div class="remodal remodalupdate" style="padding:0" data-remodal-id="remodalupdate">
                 <button data-remodal-action="close" class="remodal-close"></button>
                 <img src="/static/img/30-03-2018_changelog.jpg" style="max-width:700px">
             </div>
-
-            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#1155</span></span>   
+            -->
         </section>
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bab.js"></script>
@@ -51,19 +62,19 @@
         <script src="/static/js/tag-it.min.js"></script>
         <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="/static/js/{{ page.scriptToUse }}.js#39"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#40"></script>
         <script src="/static/js/remodal.js"></script>
         <script>
             setTimeout(function(){
                 if(!getCookie('mdis')){
                     var inst = $('[data-remodal-id=remodaldiscord]').remodal({hashTracking:false});
                     inst.open();
-                } else if(!getCookie('mdisupdate1')) {
+                }/* else if(!getCookie('mdisupdate1')) {
                     if ($(window).width() > 600) {
                         var inst = $('[data-remodal-id=remodalupdate]').remodal({hashTracking:false});
                         inst.open();
                     }
-                }
+                }*/
             },6500);
 
             $(document).on('confirmation', '.remodaldiscord', function () {
@@ -74,10 +85,10 @@
                 setCookie('mdisupdate1', 'true', 365);
                 setCookie('mdis', 'true', 365);
             });
-
-            $(document).on('closing', '.remodalupdate', function () {
+            
+            /*$(document).on('closing', '.remodalupdate', function () {
                 setCookie('mdisupdate1', 'true', 365);
-            });
+            });*/
 
             function setCookie(name,value,days) {
                 var expires = "";
