--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#fb016e">
 
         <link rel="icon" type="image/png" href="/static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#29'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#30'>
 
         {% if page.sel == 'skins' %}
         <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css#1'>
@@ -58,7 +58,7 @@
         <header>
             <a href="/" id="defaulta">
                 <img src="/static/img/logo.png" id="logo" draggable="false">
-                <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v4.0</span>{% endif %}</h1>
+                <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v4.1</span>{% endif %}</h1>
             </a>
             <br/>
             <nav>
@@ -71,10 +71,12 @@
                         <a href="/xpchecker.html">XP Checker</a><br/>
                         <a href="/quickplay.html">Quick Play Map Checker</a><br/>
                         <a href="/serverstatus.html">Bonk.io Server Status</a>
+                        <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">Limited-Time Merch!</a>
                     </div>
                 </span>
                 <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank"><i class="fab fa-discord"></i></a>
             </nav>
+            <a href="/changelog.html" style="color:#fb016e;position:absolute;top:10px;right:10px;font-size:18px">CHANGELOG</a>
         </header>
         <section>
             <!-- emergency notice 
