More Discord plugging & some snazzy SEO

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -25,8 +25,8 @@
             <div class="remodal remodaldiscord" data-remodal-id="remodaldiscord">
                 <button data-remodal-action="close" class="remodal-close"></button>
                 <h1 class="parthead">Join our Discord server!</h1>
-                <p>Chat with 1000+ others in the official Bonk Leagues Discord server!</p>
-                <p>Here you can get support, chat, suggestions and everything Bonk.</p>
+                <p>Chat with 1300+ others in the official Bonk Leagues Discord server!</p>
+                <p>The biggest Bonk.io-related Discord. Join today.</p>
                 <br/>
                 <button data-remodal-action="confirm" onclick="window.open('https://discord.gg/RadQ7xx', '_blank');" class="remodal-confirm button">Join!</button>
                 <button data-remodal-action="close" class="remodal-cancel button">No thanks</button>
