--- a/_includes/top.html
+++ b/_includes/top.html
@@ -71,10 +71,9 @@
                         <a href="/xpchecker.html">XP Checker</a><br/>
                         <a href="/quickplay.html">Quick Play Map Checker</a><br/>
                         <a href="/serverstatus.html">Bonk.io Server Status</a>
-                        <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">Limited-Time Merch!</a>
                     </div>
                 </span>
-                <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="/bonk_discord.html" id="discordlink"><i class="fab fa-discord"></i></a>
             </nav>
             <a href="/changelog.html" style="color:#fb016e;position:absolute;top:10px;right:10px;font-size:18px">CHANGELOG</a>
         </header>
