--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,7 +1,7 @@
             <br/>{% if page.sel != 'skins' %}<hr/><br/>{% endif %}
 
+            <!--
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Bonk (Money Grab) Leagues -->
                 <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-client="ca-pub-8362785424135480"
@@ -11,6 +11,26 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
             <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
+            -->
+            <script id="spout-tag-f0706c1a-a645-46e0-bbce-6e107e40621e">
+                (function() {
+                  var r = encodeURIComponent(top.document.referrer.substring(0,250)),
+                      p = encodeURIComponent(top.document.location.href.substring(0,250)),
+                      t = Date.now(),
+                      u = 'f0706c1a-a645-46e0-bbce-6e107e40621e',
+                      e = document.createElement('script'),
+                      s = sessionStorage.getItem('spoutable-' + u);
+                  if (!s) {
+                    var m = Math.random.bind(Math);
+                    s = JSON.stringify({ sessionId: [ t, m(), m(), m(), m(), m(), m(), m(), m(), m(), m(), m(), m() ]});
+                    sessionStorage.setItem('spoutable-' + u, s);
+                  }
+                  e.async = true;
+                  e.src='//s.spoutable.com/s?u='+u+'&s='+encodeURIComponent(s)+'&t='+t+'&r='+r+'&p='+p;
+                  document.head.appendChild(e);
+                })();
+              </script>
+              
             <br/><hr/><br/>
 
             <footer>
@@ -34,9 +54,8 @@
                 <a style="text-decoration:underline;cursor:pointer;" data-remodal-action="cancel" id="cusa">Don't show me this again</a>
             </div>
             <br/><br/>
-
+            <!--
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Bobk Beks -->
                 <ins class="adsbygoogle"
                     style="display:block"
                     data-ad-client="ca-pub-8362785424135480"
@@ -45,6 +64,7 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+            -->
             <!--
             <div class="remodal remodalupdate" style="padding:0" data-remodal-id="remodalupdate">
                 <button data-remodal-action="close" class="remodal-close"></button>
