--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -113,5 +113,23 @@
                 document.cookie = name+'=; Max-Age=-99999999;';  
             }
         </script>
+        <script id="spout-tag-f0706c1a-a645-46e0-bbce-6e107e40621e">
+            (function() {
+                var r = encodeURIComponent(top.document.referrer.substring(0,250)),
+                    p = encodeURIComponent(top.document.location.href.substring(0,250)),
+                    t = Date.now(),
+                    u = 'f0706c1a-a645-46e0-bbce-6e107e40621e',
+                    e = document.createElement('script'),
+                    s = sessionStorage.getItem('spoutable-' + u);
+                if (!s) {
+                var m = Math.random.bind(Math);
+                s = JSON.stringify({ sessionId: [ t, m(), m(), m(), m(), m(), m(), m(), m(), m(), m(), m(), m() ]});
+                sessionStorage.setItem('spoutable-' + u, s);
+                }
+                e.async = true;
+                e.src='//s.spoutable.com/s?u='+u+'&s='+encodeURIComponent(s)+'&t='+t+'&r='+r+'&p='+p;
+                document.head.appendChild(e);
+            })();
+        </script>
     </body>
 </html>
