Changed ads to 'auto ads' from adsense, apparently they are meant to be better but I may them if not

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -53,6 +53,15 @@
                 "description": "Bonk Leagues - the best tools for bonk.io, featuring a skin manager, XP checker and more for http://bonk.io/"
             }
         </script>
+
+        <!-- auto ads -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-8362785424135480",
+                enable_page_level_ads: true
+            });
+        </script>
     </head>
     <body>
         <header>
