Skin codes have been completely removed, layout changes and experimenting with new ad formats.

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -63,7 +63,8 @@
         <script src="/static/js/md5.js"></script>
         <script src="/static/js/jscolor.min.js"></script>
         <script src="/static/js/tag-it.min.js"></script>
-        <script src="/static/js/skineditor.js#20"></script>
+        <script src="/static/js/skineditor.js#21"></script>
+        </div>
         {% endif %}
         <script src="/static/js/{{ page.scriptToUse }}.js#45"></script>
         <script src="/static/js/remodal.js"></script>
