Update favicon & embed image to new(er), transparent logo. (it was bugging me!)

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -12,10 +12,10 @@
         <link rel="canonical" href="{{ page.canonical }}" />
         <meta property="og:url" content="{{ page.canonical }}" />
         <meta property="og:site_name" content="Bonk Leagues" />
-        <meta property="og:image" content="https://bonkleagues.github.io/static/img/logo.png" />
+        <meta property="og:image" content="https://bonkleagues.github.io/static/img/logo_1000px.png" />
         <meta name="theme-color" content="#fb016e">
 
-        <link rel="icon" type="image/png" href="/static/img/logo.png">
+        <link rel="icon" type="image/png" href="/static/img/editor-logo.png">
         <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#33'>
 
         {% if page.sel == 'skins' %}
