Add contact email address

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -17,6 +17,7 @@
                 <img src="/static/img/editor-logo.png" width="32"><br/>
                 <span style="font-size:10px;">
                     Bonk Leagues is in no way affiliated with bonk.io, multiplayer.gg or Chaz, but is simply a fan-made tool website.<br/>
+                    <span style="font-size:13px;">Contact us: <b><a href="mailto:hi@bonkleagues.io" target="_blank">hi@bonkleagues.io</a></b></span><br/>-<br/>
                     Our website uses cookies to enhance user experience and are required for most of the website to function. By using Bonk Leagues, you agree to the use of cookies.<br/>
                     <a href="https://bonk.io">Play bonk.io</a> &bull; <a href="/static/data/privacy_policy.html" target="_blank">Privacy &amp; Cookie Policy</a>
                 </span>
