--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -123,7 +123,7 @@
             }
         </script>
 
-        <!-- chrsitmas -->
+        <!-- chrsitmas
         <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
         <script>
             var sf = new Snowflakes({
@@ -136,6 +136,6 @@
                 maxSize: 8
             });
         </script>
-        <style>.snowflakes { position: absolute; top: 0; left: 0; width: 100%; height: 255px; overflow: hidden } </style>
+        <style>.snowflakes { position: absolute; top: 0; left: 0; width: 100%; height: 255px; overflow: hidden } </style> -->
     </body>
 </html>
