--- a/static/css/skinstyle.css
+++ b/static/css/skinstyle.css
@@ -216,11 +216,19 @@ input:-webkit-autofill {
     position:absolute;
     top:155px;
     left:10px;
+	max-width: 205px;
+    width: 100%;
+    max-height: 1000px;
+    height: 100%;
 }
 #rightBan{
     position:absolute;
     top:155px;
     right:10px;
+	max-width: 205px;
+    width: 100%;
+    max-height: 1000px;
+    height: 100%;
 }
 #pageCont{
     margin:0px 180px;
