Revert "Roll out CPMStar ads, replacing Adsense"
This reverts commit 215ea8191b2d1522b4b575f0da463a5c35af38a9.

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,4 +1,16 @@
             <br/>{% if page.sel != 'skins' %}<hr/><br/>{% endif %}
+
+            <!--
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-8362785424135480"
+                data-ad-slot="5034197850"
+                data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            -->
             <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
             <br/><br/>
             <footer>
@@ -25,6 +37,18 @@
             </div>
             {% endif %}
             <br/><br/>
+
+            <!--
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-8362785424135480"
+                    data-ad-slot="9726605611"
+                    data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            -->
             <!--
             <div class="remodal remodalupdate" style="padding:0" data-remodal-id="remodalupdate">
                 <button data-remodal-action="close" class="remodal-close"></button>
@@ -36,17 +60,6 @@
         {% if page.specialAds == 'on' %}
         </div>
         {% endif %}
-
-        <!-- BEGIN CPMSTAR ANCHOR AD CODE -->
-        <script type="text/javascript">
-            var cpmstar_anchorad_settings = {
-                poolid: 82873, //Pool ID assigned by CPMStar
-                dir: 1
-                };
-
-            (function (d, t, s) { t = d.createElement('script'); t.type = 'text/javascript'; t.src = (d.location.protocol == 'https:'?'//server':'//cdn') + '.cpmstar.com/cached/js/anchorad_v100.pack.js'; t.async = true; s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(t, s); })(document, {}, {});
-        </script>
-        <!-- END CPMSTAR ANCHOR AD CODE -->
 
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bab.js"></script>
