--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#fb016e">
 
         <link rel="icon" type="image/png" href="/static/img/editor-logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#34'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#33'>
 
         {% if page.sel == 'skins' %}
         <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css#1'>
@@ -54,14 +54,14 @@
             }
         </script>
 
-        <!-- auto ads
+        <!-- auto ads -->
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({
                 google_ad_client: "ca-pub-8362785424135480",
                 enable_page_level_ads: true
             });
-        </script> -->
+        </script>
     </head>
     <body>
         <header>
