--- a/_includes/top.html
+++ b/_includes/top.html
@@ -62,6 +62,24 @@
                 enable_page_level_ads: true
             });
         </script>
+
+        <!-- CPMSTAR ZONETAG - PLACE INTO HEAD SECTION OR RUN CODE AT STARTUP -->
+        <script>
+            (function(zonefile) { 
+            var rnd = Math.round(Math.random()*999999);
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+            var proto = document.location.protocol;
+            var host = ( proto == "https:" || proto == "file:")?"https://server":"//cdn";
+            if(window.location.hash=="#cpmstarDev") host = "//dev.server";
+            if(window.location.hash=="#cpmstarStaging") host = "//staging.server"; 
+            s.src = host + ".cpmstar.com/cached/zonefiles/" + zonefile + ".js?rnd="+rnd; 
+            var s2=document.getElementsByTagName('script')[0];
+            s2.parentNode.insertBefore(s, s2);
+            var y=window.location.href.split('#')[0].split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>1},0);y=(10+((y*7)%26)).toString(36)+y.toString(36);
+            var drutObj = window[y] = window[y] || {};
+            window.cpmstarAPI = function(o) { (drutObj.cmd = drutObj.cmd || []).push(o); }
+            }('364_50695_gameapi'));
+        </script>
     </head>
     <body>
         <header>
