--- a/_includes/top.html
+++ b/_includes/top.html
@@ -24,7 +24,7 @@
         {% endif %}
 
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="static/css/remodal.css">
+        <link rel="stylesheet" href="static/css/remodal.css#1">
         <link rel="stylesheet" href="static/css/remodal-default-theme.css">
 
         <meta name="google-site-verification" content="FEijvMGwCNkxbshW2jR9aTTYvpJFDkejSXJRR7cPfpQ" />
@@ -62,6 +62,9 @@
                 enable_page_level_ads: true
             });
         </script>
+
+        <!-- adplayer.pro -->
+        <script async src="https://cdn.stat-rock.com/player.js"></script>
     </head>
     <body>
         <header>
