Moved to bonkleagues.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,16 @@
-{% include top.html %}
-{{ content }}
-{% include bottom.html %}
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0;url=https://bonkleagues.io{{page.url}}" />
+    <link rel="canonical" href="https://bonkleagues.io{{page.url}}" />
+</head>
+
+<body>
+    <p>
+        The page been moved to <a href="https://bonkleagues.io{{page.url}}">https://bonkleagues.io{{page.url}}</a>
+    </p>
+</body>
+
+</html>
